--- a/cart/templates/cart/detail.html
+++ b/cart/templates/cart/detail.html
@@ -36,13 +36,37 @@
                 </tr>
             {% endwith %}
         {% endfor %}
+        {% if cart.coupon %}
+            <tr class="subtotal">
+                <td>Цена без скидки</td>
+                <td colspan="4"></td>
+                <td class="num">{{ cart.get_total_price }} руб</td>
+            </tr>
+            <tr>
+                <td>
+                    "{{ cart.coupon.code }}" купон
+                    (скидка {{ cart.coupon.discount }}%)
+                </td>
+                <td colspan="4"></td>
+                <td class="num neg">
+                    - {{ cart.get_discount|floatformat:"2" }} руб
+                </td>
+            </tr>
+        {% endif %}
         <tr class="total">
-            <td>Общая стоимость</td>
+            <td>Цена со скидкой</td>
             <td colspan="4"></td>
-            <td class="num">{{ cart.get_total_price }} руб</td>
+            <td class="num">
+                {{ cart.get_total_price_after_discount|floatformat:"2" }} руб
+            </td>
         </tr>
         </tbody>
     </table>
+    <form action="{% url "coupons:apply" %}" method="post">
+    {{ coupon_apply_form }}
+    <input type="submit" value="Применить">
+    {% csrf_token %}
+</form>
     <p class="text-right">
         <a href="{% url "shop:product_list" %}" class="button light">Продолжить покупку</a>
         <a href="{% url "orders:order_create" %}" class="button">
