--- a/orders/templates/orders/order/create.html
+++ b/orders/templates/orders/order/create.html
@@ -10,15 +10,21 @@
             {% for item in cart %}
                 <li>
                     {{ item.quantity }}x {{ item.product.name }}
-                    <span>{{ item.total_price }} руб</span>
+                    <span>${{ item.total_price }}</span>
                 </li>
             {% endfor %}
+            {% if cart.coupon %}
+                <li>
+                    "{{ cart.coupon.code }}" ({{ cart.coupon.discount }}% off)
+                    <span>- ${{ cart.get_discount|floatformat:"2" }}</span>
+                </li>
+            {% endif %}
         </ul>
-        <p>Общая стоимость: {{ cart.get_total_price }} руб</p>
+        <p>Общая стоимость: {{ cart.get_total_price_after_discount|floatformat:"2" }} руб</p>
     </div>
     <form action="." method="post" class="order-form">
         {{ form.as_p }}
-        <p><input type="submit" value="Place order"></p>
+        <p><input type="submit" value="Оформить заказ"></p>
         {% csrf_token %}
     </form>
 {% endblock %}
