--- a/shop/templates/shop/product/detail.html
+++ b/shop/templates/shop/product/detail.html
@@ -1,7 +1,7 @@
 {% extends "shop/base.html" %}
 {% load static %}
 {% block title %}
-    {% if category %}{{ category.title }}{% else %}Products{% endif %}
+    {% if category %}{{ category.title }}{% else %}Товары{% endif %}
 {% endblock %}
 {% block content %}
     <div class="product-detail">
@@ -9,11 +9,10 @@
         <h1>{{ product.name }}</h1>
         <h2><a href="{{ product.category.get_absolute_url }}">{{ product.category }}</a></h2>
         <p class="price">{{ product.price }} руб</p>
-        <p class="price">${{ product.price }}</p>
         <form action="{% url "cart:cart_add" product.id %}" method="post">
             {{ cart_product_form }}
             {% csrf_token %}
-            <input type="submit" value="Add to cart">
+            <input type="submit" value="Добавить в козину">
         </form>
         <div class="product-description">
             {{ product.description|linebreaks }}
