--- a/orders/templates/orders/order/create.html
+++ b/orders/templates/orders/order/create.html
@@ -10,13 +10,13 @@
             {% for item in cart %}
                 <li>
                     {{ item.quantity }}x {{ item.product.name }}
-                    <span>${{ item.total_price }}</span>
+                    <span>{{ item.total_price }} руб</span>
                 </li>
             {% endfor %}
             {% if cart.coupon %}
                 <li>
                     "{{ cart.coupon.code }}" ({{ cart.coupon.discount }}% off)
-                    <span>- ${{ cart.get_discount|floatformat:"2" }}</span>
+                    <span>- {{ cart.get_discount|floatformat:"2" }} руб</span>
                 </li>
             {% endif %}
         </ul>
