--- a/cart/templates/cart/detail.html
+++ b/cart/templates/cart/detail.html
@@ -36,7 +36,7 @@
                 </tr>
             {% endwith %}
         {% endfor %}
-        {% if cart.coupon %}
+        {% if cart.percentage_coupon %}
             <tr class="subtotal">
                 <td>Цена без скидки</td>
                 <td colspan="4"></td>
@@ -44,8 +44,8 @@
             </tr>
             <tr>
                 <td>
-                    "{{ cart.coupon.code }}" купон
-                    (скидка {{ cart.coupon.discount }}%)
+                    "{{ cart.percentage_coupon.code }}" купон
+                    (скидка {{ cart.percentage_coupon.discount }}%)
                 </td>
                 <td colspan="4"></td>
                 <td class="num neg">
@@ -53,6 +53,22 @@
                 </td>
             </tr>
         {% endif %}
+
+        {% if cart.fixed_coupon %}
+            {% for coupon in cart.fixed_coupon %}
+                <tr>
+                    <td>
+                        "{{ coupon.code }}" купон
+                        (скидка {{ coupon.discount }} руб)
+                    </td>
+                    <td colspan="4"></td>
+                    <td class="num neg">
+                        - {{ coupon.discount|floatformat:"2" }} руб
+                    </td>
+                </tr>
+            {% endfor %}
+        {% endif %}
+
         <tr class="total">
             <td>Цена со скидкой</td>
             <td colspan="4"></td>
@@ -60,11 +76,16 @@
                 {{ cart.get_total_price_after_discount|floatformat:"2" }} руб
             </td>
         </tr>
+    </table>
         </tbody>
     </table>
     <form action="{% url "coupons:apply" %}" method="post">
         {{ coupon_apply_form }}
         <input type="submit" value="Применить">
+        {% csrf_token %}
+    </form><br>
+    <form action="{% url "coupons:clear_coupons" %}" method="post">
+        <input type="submit" value="Удалить купоны">
         {% csrf_token %}
     </form>
     <p class="text-right">
