--- a/orders/templates/orders/order/create.html
+++ b/orders/templates/orders/order/create.html
@@ -13,9 +13,9 @@
                     <span>{{ item.total_price }} руб</span>
                 </li>
             {% endfor %}
-            {% if cart.coupon %}
+            {% if cart.percentage_coupon %}
                 <li>
-                    "{{ cart.coupon.code }}" ({{ cart.coupon.discount }}% off)
+                    "{{ cart.percentage_coupon.code }}" ({{ cart.percentage_coupon.discount }}% off)
                     <span>- {{ cart.get_discount|floatformat:"2" }} руб</span>
                 </li>
             {% endif %}
